--- a/front/netlify.toml
+++ b/front/netlify.toml
@@ -1,6 +1,5 @@
 [[headers]]
-  for = "/*.webp"
+  for = "/*.(webp|jpg|png|css|js)"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
-    Content-Type = "image/webp"
-    
+
