Ignore submodule errors in build

--- a/front/netlify.toml
+++ b/front/netlify.toml
@@ -1,7 +1,8 @@
 [build]
-  publish = "website" 
+  publish = "website"
+  command = "git submodule sync && git submodule update --init || true"  # 서브모듈 실패 무시
 [[headers]]
-  for = "*.webp"
+  for = "/front/*.webp"
   [headers.values]
     Content-Type = "image/webp"
     Cache-Control = "public, max-age=31536000"
