--- a/front/netlify.toml
+++ b/front/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-  publish = "website"  
-  command = "echo 'Skipping submodules'"  
+  publish = "popol/front"  # front 폴더만 배포
+  command = "echo 'Skipping submodules'"  # 서브모듈 처리 생략
 [[headers]]
-  for = "/front/*.webp"
+  for = "/*.webp"  # 경로 수정
   [headers.values]
     Content-Type = "image/webp"
     Cache-Control = "public, max-age=31536000"
